# haskell-template

./: .envrc  .ghcid  .gitignore  .hlint.yaml  Jenkinsfile  LICENSE  LICENSE.jinja  README.md  cabal.nix  comma-module.nix  copier.yml  flake.nix  garnix.yaml  haskell-template.cabal  haskell.nix  hie.yaml  justfile  nixpkgs-140774.nix  om.yaml  script-module.nix  shell.nix  treefmt.toml  vira.hs  {{ package_name }}.cabal.jinja
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yaml  publish.yaml  update-flake-lock.yaml
dev/: flake-module.nix  flake.nix  partition.nix
nix/: banner.nix  horizon-package-set.nix  script-module.nix  wrapper.nix
nix/modules/: devshell.nix  formatter.nix  haskell.nix  om.nix  template.nix
nix/modules/flake/: devshell.nix  haskell.nix  haskell.nix.jinja  pre-commit.nix
nix/modules/flake-parts/: devshell.nix  formatter.nix  haskell.nix  pre-commit.nix  template.nix
nix/treefmt-flake/: flake-module.nix
src/: Lib.hs  Main.hs
tests/: Main.hs  Spec.hs
