cabal-version:      2.4
name:               haskell-template
version:            0.1.0.0
license:            MIT
copyright:          2021 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

executable haskell-template
  build-depends:
    , aeson
    , async
    , base
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , lens
    , megaparsec
    , monad-logger
    , mtl
    , neat-interpolation
    , profunctors
    , relude
    , shower
    , tagged
    , text
    , time
    , unliftio
    , with-utf8

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
